# Altair

./: .clang-format  .gitignore  Altair.sln  Altair.vcxproj  Altair.vcxproj.filters  CMakeLists.txt  runtime.c
plugins/: testing.exp  testing.lib
plugins/keyboard/: CMakeLists.txt  keyboard.c  main.c
src/: aldefs.h  altair.h  array.c  array.h  dll.h  filesystem.h  log.h  main.c  manager.c  manager.h  plugin.c  plugin.h  threads.h
src/altair/: aldefs.h  array.c  array.h  dll.h  filewatcher.h  hash.h  log.h  manager.c  manager.h  plugin.c  plugin.h  string.c  string.h  threads.h
src/altair/backend/unix/: dll.c  filewatcher.c  log.c  threads.c
src/altair/backend/windows/: dll.c  log.c  threads.c
src/backend/windows/: dll.c  filesystem.c  log.c  threads.c
testing/: plugin_main.c  testing.vcxproj  testing.vcxproj.filters
